update example config

--- a/example/watchingcat.conf
+++ b/example/watchingcat.conf
@@ -6,3 +6,12 @@ upload_cats {
     local_store_min_size = 20
     regularity = 10s
 }
+# override default config
+# http {
+#     port = 9000
+# }
+# mongo {
+#     servers = [
+#         { host = "localhost", port = 27017 }
+#     ]
+# }
